Ajuste para dados de treino e de teste

--- a/Analise Titanic - Parte 2.ipynb
+++ b/Analise Titanic - Parte 2.ipynb
@@ -6,121 +6,65 @@
    "source": [
     "# Análise Titanic (Parte 2)- Feature Scaling\n",
     "\n",
-    "Neste notebook iremos continuar com a análise de dados dos passageiros do Titanic. Agora iremos trabalhar com os dados com alguns tratamentos possíveis\n",
+    "Neste notebook iremos continuar com a análise de dados dos passageiros do Titanic. \n",
+    "Iremos padronizar os valores quantitativos de idade ('age') e 'familia' tirando a média e dividindo pela variância (um dos possíveis tratamentos que podemos fazer com os dados).\n",
     "\n",
     "\n",
-    "## Etapa inicial - Baixar os dados"
+    "## Baixar os dados e realizar tratamentos feitos na Parte 1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 1309 entries, 0 to 1308\n",
-      "Data columns (total 14 columns):\n",
-      "pclass       1309 non-null int64\n",
-      "survived     1309 non-null int64\n",
-      "name         1309 non-null object\n",
-      "sex          1309 non-null object\n",
-      "age          1046 non-null float64\n",
-      "sibsp        1309 non-null int64\n",
-      "parch        1309 non-null int64\n",
-      "ticket       1309 non-null object\n",
-      "fare         1308 non-null float64\n",
-      "cabin        295 non-null object\n",
-      "embarked     1307 non-null object\n",
-      "boat         486 non-null object\n",
-      "body         121 non-null float64\n",
-      "home.dest    745 non-null object\n",
-      "dtypes: float64(3), int64(4), object(7)\n",
-      "memory usage: 143.2+ KB\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "\n",
     "dados = pd.read_excel('http://biostat.mc.vanderbilt.edu/wiki/pub/Main/DataSets/titanic3.xls')\n",
+    "## Criar variável \"familia\" como a soma entre 'sibsp' e 'parch'\n",
+    "dados['familia'] = dados['sibsp'] + dados['parch'] \n",
     "\n",
-    "dados.head(3)\n",
-    "dados.info()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Preencher os valores faltantes da coluna idade ('age') com a mediana. Criar a variável 'familia' sendo a soma das variáveis 'sibsp' e 'parch' "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "## Preencher idades faltantes\n",
-    "dados.isna().sum()\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "X_train, X_test, y_train, y_test = train_test_split(dados.iloc[:,dados.columns.values !='survived'], dados['survived'], test_size=0.33, random_state=42)\n",
     "\n",
     "## Inserir Idades faltantes com a Mediana\n",
-    "dados['age'].fillna(dados['age'].median(), inplace = True)\n",
+    "X_train['age'].fillna(X_train['age'].median(), inplace = True)\n",
+    "X_test['age'].fillna(X_test['age'].median(), inplace = True)\n",
     "\n",
-    "## Criar variável \"familia\" como a soma entre 'sibsp' e 'parch'\n",
-    "dados['familia'] = dados['sibsp'] + dados['parch'] "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Transformar as variáveis 'pclass' e 'sex' em binárias (dummies"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "## Transformar variáveis categóricas\n",
-    "from sklearn.preprocessing import LabelEncoder\n",
-    "labelencoder = LabelEncoder()\n",
-    "labelencoder.fit_transform(dados['sex'])\n",
+    "#Criar dummies\n",
+    "X_train = pd.get_dummies(X_train, columns=[\"pclass\",\"sex\"])\n",
+    "X_test = pd.get_dummies(X_test, columns=[\"pclass\",\"sex\"])\n",
     "\n",
-    "dados_ajustados2 = pd.get_dummies(dados, columns=[\"pclass\",\"sex\"])\n",
+    "#Apagar as dummies que servirão de base\n",
+    "del X_train['sex_female']\n",
+    "del X_train['pclass_1']\n",
     "\n",
-    "del dados_ajustados2['sex_female']\n",
-    "del dados_ajustados2['pclass_1']\n",
+    "del X_test['sex_female']\n",
+    "del X_test['pclass_1']\n",
     "\n",
-    "resultados_acuracia2 = pd.DataFrame(columns = ['modelo', 'acuracia'])"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Padronizar os valores quantitativos de idade ('age') e 'familia' tirando a média e dividindo pela variância"
+    "from sklearn.metrics import accuracy_score\n",
+    "from sklearn.metrics import confusion_matrix\n",
+    "\n",
+    "# Tabela com resultados finais\n",
+    "resultados_acuracia = pd.DataFrame(columns = ['modelo', 'acuracia'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
     "#### Padronizar as variáveis quantitativas\n",
     "from sklearn import preprocessing\n",
     "\n",
-    "std_scale = preprocessing.StandardScaler().fit(dados_ajustados2[['age', 'familia']])\n",
-    "dados_ajustados2[['age', 'familia']] = std_scale.transform(dados_ajustados2[['age','familia']])"
+    "std_scale = preprocessing.StandardScaler().fit(X_train[['age', 'familia']])\n",
+    "X_train[['age', 'familia']] = std_scale.transform(X_train[['age','familia']])\n",
+    "\n",
+    "std_scale2 = preprocessing.StandardScaler().fit(X_test[['age', 'familia']])\n",
+    "X_test[['age', 'familia']] = std_scale2.transform(X_test[['age','familia']])\n"
    ]
   },
   {
@@ -132,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,23 +107,22 @@
     "]\n",
     "\n",
     "# Criar uma função para rodar todos os modelos \n",
-    "def analise(modelo, nome, dados, tabela_acuracia):\n",
+    "def analise(modelo, nome, tabela_acuracia):\n",
     "    \n",
-    "    modelo.fit(dados[['pclass_2','pclass_3','age','sex_male','familia']],dados['survived'])\n",
-    "    previsto = modelo.predict(dados[['pclass_2','pclass_3','age','sex_male','familia']])\n",
-    "    acuracia = accuracy_score(dados['survived'],previsto)\n",
+    "    modelo.fit(X_train[['pclass_2','pclass_3','age','sex_male','familia']],y_train)\n",
+    "    previsto = modelo.predict(X_test[['pclass_2','pclass_3','age','sex_male','familia']])\n",
+    "    acuracia = accuracy_score(y_test,previsto)\n",
     "    tabela_acuracia = tabela_acuracia.append({'modelo':nome, 'acuracia':acuracia}, ignore_index = True)\n",
     "                                             \n",
     "    return tabela_acuracia\n",
     "\n",
     "for item in modelos:\n",
-    "    resultados_acuracia = analise(item[0],item[1], dados_ajustados2, resultados_acuracia2)\n",
-    "    resultados_acuracia2 = resultados_acuracia"
+    "    resultados_acuracia = analise(item[0],item[1], resultados_acuracia)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -211,32 +154,32 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>lr_sklearn</td>\n",
-       "      <td>0.789916</td>\n",
+       "      <td>0.803241</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>knn</td>\n",
-       "      <td>0.829641</td>\n",
+       "      <td>0.752315</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>naive_bayes</td>\n",
-       "      <td>0.799847</td>\n",
+       "      <td>0.784722</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>lda</td>\n",
-       "      <td>0.788388</td>\n",
+       "      <td>0.800926</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>svm</td>\n",
-       "      <td>0.810542</td>\n",
+       "      <td>0.798611</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
        "      <td>arvore_decisao</td>\n",
-       "      <td>0.880825</td>\n",
+       "      <td>0.766204</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -244,21 +187,21 @@
       ],
       "text/plain": [
        "           modelo  acuracia\n",
-       "0      lr_sklearn  0.789916\n",
-       "1             knn  0.829641\n",
-       "2     naive_bayes  0.799847\n",
-       "3             lda  0.788388\n",
-       "4             svm  0.810542\n",
-       "5  arvore_decisao  0.880825"
+       "0      lr_sklearn  0.803241\n",
+       "1             knn  0.752315\n",
+       "2     naive_bayes  0.784722\n",
+       "3             lda  0.800926\n",
+       "4             svm  0.798611\n",
+       "5  arvore_decisao  0.766204"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "resultados_acuracia2"
+    "resultados_acuracia"
    ]
   }
  ],
